@@ -1,210 +1,110 @@
 package com.sweetbook.controller;
 
 import com.sweetbook.service.BookProjectService;
+import com.sweetbook.service.PetService;
 import com.sweetbook.vo.BookProjectVO;
+import com.sweetbook.vo.PetVO;
+
+import java.util.UUID;
+
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.support.GeneratedKeyHolder;
-import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-
-import java.io.File;
-import java.sql.PreparedStatement;
-import java.sql.Statement;
-import java.sql.Types;
-import java.util.List;
-import java.util.UUID;
 
 @RestController
 @RequestMapping("/api/book-projects")
 public class BookProjectController {
 
     private final BookProjectService bookProjectService;
-    private final JdbcTemplate jdbcTemplate;
+    private final PetService petService;
 
     public BookProjectController(BookProjectService bookProjectService,
-                                 JdbcTemplate jdbcTemplate) {
+                                 PetService petService) {
         this.bookProjectService = bookProjectService;
-        this.jdbcTemplate = jdbcTemplate;
+        this.petService = petService;
     }
 
-    @PostMapping
-    public ResponseEntity<Long> createBookProject(
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<String> saveBookProject(
+            @RequestParam(value = "bookProjectId", required = false) Long bookProjectId,
             @RequestParam("petName") String petName,
             @RequestParam(value = "memorialDate", required = false) String memorialDate,
             @RequestParam("title") String title,
-            @RequestParam("coverTitle") String coverTitle,
+            @RequestParam(value = "coverTitle", required = false) String coverTitle,
             @RequestParam(value = "coverSubtitle", required = false) String coverSubtitle,
             @RequestParam(value = "dedicationText", required = false) String dedicationText,
-            @RequestParam("templateCode") String templateCode,
-            @RequestParam("bookSpecCode") String bookSpecCode,
-            @RequestParam(value = "status", required = false) String status,
-            @RequestParam(value = "file", required = false) MultipartFile file
+            @RequestParam(value = "templateCode", required = false) String templateCode,
+            @RequestParam(value = "bookSpecCode", required = false) String bookSpecCode,
+            @RequestParam(value = "status", required = false, defaultValue = "DRAFT") String status,
+            @RequestPart(value = "file", required = false) MultipartFile file
     ) {
-        Long memberId = 1L;
-
-        petName = safe(petName);
-        memorialDate = safe(memorialDate);
-        title = safe(title);
-        coverTitle = safe(coverTitle);
-        coverSubtitle = safe(coverSubtitle);
-        dedicationText = safe(dedicationText);
-        templateCode = safe(templateCode);
-        bookSpecCode = safe(bookSpecCode);
-        status = safe(status);
-
-        if (petName.isBlank()) {
-            throw new IllegalArgumentException("반려견 이름을 입력해주세요.");
-        }
-        if (title.isBlank()) {
-            throw new IllegalArgumentException("책 제목을 입력해주세요.");
-        }
-        if (coverTitle.isBlank()) {
-            throw new IllegalArgumentException("표지 제목을 입력해주세요.");
-        }
-        if (templateCode.isBlank()) {
-            throw new IllegalArgumentException("템플릿을 선택해주세요.");
-        }
-        if (bookSpecCode.isBlank()) {
-            throw new IllegalArgumentException("판형을 선택해주세요.");
-        }
-        if (status.isBlank()) {
-            status = "DRAFT";
+        if (petName == null || petName.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("petName이 비어 있습니다.");
         }
 
-        String profileImageUrl = saveProfileImage(file);
-        Long petId = createPet(memberId, petName, profileImageUrl, memorialDate);
+        if (title == null || title.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("title이 비어 있습니다.");
+        }
 
-        BookProjectVO bookProjectVO = new BookProjectVO();
-        bookProjectVO.setPetId(petId);
-        bookProjectVO.setTitle(title);
-        bookProjectVO.setCoverTitle(coverTitle);
-        bookProjectVO.setCoverSubtitle(coverSubtitle);
-        bookProjectVO.setDedicationText(dedicationText);
-        bookProjectVO.setTemplateCode(templateCode);
-        bookProjectVO.setBookSpecCode(bookSpecCode);
-        bookProjectVO.setStatus(status);
+        if (bookSpecCode == null || bookSpecCode.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("book_spec_uid가 비어 있습니다.");
+        }
 
-        Long bookProjectId = bookProjectService.createBookProject(bookProjectVO);
-        return ResponseEntity.ok(bookProjectId);
+        if (templateCode == null || templateCode.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("content_template_uid가 비어 있습니다.");
+        }
+
+        PetVO pet = new PetVO();
+        pet.setName(petName.trim());
+        
+        pet.setPetToken(UUID.randomUUID().toString());
+
+        Long petId = petService.createPet(pet);
+        PetVO savedPet = petService.getPetById(petId);
+
+        BookProjectVO vo = new BookProjectVO();
+        vo.setBookProjectId(bookProjectId);
+        vo.setPetId(savedPet.getPetId());
+        vo.setTitle(title.trim());
+        vo.setCoverTitle(
+                coverTitle != null && !coverTitle.trim().isEmpty()
+                        ? coverTitle.trim()
+                        : title.trim()
+        );
+        vo.setCoverSubtitle(coverSubtitle);
+        vo.setDedicationText(dedicationText);
+        vo.setMemorialDate(memorialDate);
+        vo.setStatus(status);
+
+        // JSP 이름은 code지만 실제 값은 UID
+        vo.setBookSpecUid(bookSpecCode);
+        vo.setContentTemplateUid(templateCode);
+
+        // 화면 호환용
+        vo.setBookSpecCode(bookSpecCode);
+        vo.setTemplateCode(templateCode);
+
+        Long savedId;
+        if (bookProjectId == null) {
+            savedId = bookProjectService.createBookProject(vo);
+        } else {
+            boolean updated = bookProjectService.modifyBookProject(vo);
+            if (!updated) {
+                return ResponseEntity.badRequest().body("책 프로젝트 수정 실패");
+            }
+            savedId = bookProjectId;
+        }
+
+        return ResponseEntity.ok(String.valueOf(savedId));
     }
 
     @GetMapping("/{bookProjectId}")
     public ResponseEntity<BookProjectVO> getBookProject(@PathVariable("bookProjectId") Long bookProjectId) {
-        BookProjectVO bookProjectVO = bookProjectService.getBookProjectById(bookProjectId);
-        if (bookProjectVO == null) {
+        BookProjectVO vo = bookProjectService.getBookProjectById(bookProjectId);
+        if (vo == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(bookProjectVO);
-    }
-
-    @GetMapping
-    public ResponseEntity<List<BookProjectVO>> getBookProjectList() {
-        return ResponseEntity.ok(bookProjectService.getBookProjectList());
-    }
-
-    @GetMapping("/pet/{petId}")
-    public ResponseEntity<List<BookProjectVO>> getBookProjectListByPetId(@PathVariable("petId") Long petId) {
-        return ResponseEntity.ok(bookProjectService.getBookProjectListByPetId(petId));
-    }
-
-    @PutMapping("/{bookProjectId}")
-    public ResponseEntity<String> modifyBookProject(@PathVariable("bookProjectId") Long bookProjectId,
-                                                    @RequestBody BookProjectVO bookProjectVO) {
-        bookProjectVO.setBookProjectId(bookProjectId);
-        boolean result = bookProjectService.modifyBookProject(bookProjectVO);
-
-        if (!result) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok("책 프로젝트 수정 성공");
-    }
-
-    @DeleteMapping("/{bookProjectId}")
-    public ResponseEntity<String> removeBookProject(@PathVariable("bookProjectId") Long bookProjectId) {
-        boolean result = bookProjectService.removeBookProject(bookProjectId);
-
-        if (!result) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok("책 프로젝트 삭제 성공");
-    }
-
-    private Long createPet(Long memberId, String petName, String profileImageUrl, String memorialDate) {
-        String petToken = "PET_" + UUID.randomUUID().toString().replace("-", "");
-
-        String insertSql = """
-                INSERT INTO pet (member_id, pet_token, name, profile_image_url, memorial_date)
-                VALUES (?, ?, ?, ?, ?)
-                """;
-
-        KeyHolder keyHolder = new GeneratedKeyHolder();
-
-        jdbcTemplate.update(connection -> {
-            PreparedStatement ps = connection.prepareStatement(insertSql, Statement.RETURN_GENERATED_KEYS);
-            ps.setLong(1, memberId);
-            ps.setString(2, petToken);
-            ps.setString(3, petName);
-
-            if (profileImageUrl == null || profileImageUrl.isBlank()) {
-                ps.setNull(4, Types.VARCHAR);
-            } else {
-                ps.setString(4, profileImageUrl);
-            }
-
-            if (memorialDate == null || memorialDate.isBlank()) {
-                ps.setNull(5, Types.DATE);
-            } else {
-                ps.setDate(5, java.sql.Date.valueOf(memorialDate));
-            }
-
-            return ps;
-        }, keyHolder);
-
-        Number key = keyHolder.getKey();
-        if (key == null) {
-            throw new IllegalStateException("반려견 저장 후 pet_id를 가져오지 못했습니다.");
-        }
-
-        return key.longValue();
-    }
-
-    private String saveProfileImage(MultipartFile file) {
-        if (file == null || file.isEmpty()) {
-            return null;
-        }
-
-        try {
-            String uploadDirPath = System.getProperty("user.dir") + File.separator + "uploads" + File.separator + "pet";
-            File uploadDir = new File(uploadDirPath);
-
-            if (!uploadDir.exists() && !uploadDir.mkdirs()) {
-                throw new IllegalStateException("업로드 폴더를 생성하지 못했습니다.");
-            }
-
-            String originalFilename = file.getOriginalFilename();
-            String extension = "";
-
-            if (originalFilename != null) {
-                int dotIndex = originalFilename.lastIndexOf(".");
-                if (dotIndex >= 0) {
-                    extension = originalFilename.substring(dotIndex);
-                }
-            }
-
-            String savedFileName = UUID.randomUUID().toString().replace("-", "") + extension;
-            File dest = new File(uploadDir, savedFileName);
-            file.transferTo(dest);
-
-            return "/uploads/pet/" + savedFileName;
-
-        } catch (Exception e) {
-            throw new RuntimeException("대표 사진 저장 실패: " + e.getMessage(), e);
-        }
-    }
-
-    private String safe(String value) {
-        return value == null ? "" : value.trim();
+        return ResponseEntity.ok(vo);
     }
 }
